--- a/kafka-csharp/Kafka/docker-compose.yml
+++ b/kafka-csharp/Kafka/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - 9092:9092
     environment:
-      KAFKA_CFG_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
     depends_on:
