--- a/kafka-csharp/Kafka/docker-compose.yml
+++ b/kafka-csharp/Kafka/docker-compose.yml
@@ -5,14 +5,40 @@ services:
     image: confluentinc/cp-zookeeper
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
-  kafka:
+  kafka1:
+    image: confluentinc/cp-kafka
+    ports:
+      - 9091:9091
+    environment:
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka1:29092,PLAINTEXT_HOST://localhost:9091
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      #KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_LOG4J_LOGGERS: kafka.controller=INFO, state.change.logger=INFO
+      CONFLUENT_SUPPORT_METRICS_ENABLED: "false"
+    depends_on:
+      - zookeeper
+  kafka2:
     image: confluentinc/cp-kafka
     ports:
       - 9092:9092
     environment:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka2:29092,PLAINTEXT_HOST://localhost:9092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_LOG4J_LOGGERS: kafka.controller=INFO, state.change.logger=INFO
+      CONFLUENT_SUPPORT_METRICS_ENABLED: "false"
+    depends_on:
+      - zookeeper
+  kafka3:
+    image: confluentinc/cp-kafka
+    ports:
+      - 9093:9093
+    environment:
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka3:29092,PLAINTEXT_HOST://localhost:9093
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_LOG4J_LOGGERS: kafka.controller=INFO, state.change.logger=INFO
+      CONFLUENT_SUPPORT_METRICS_ENABLED: "false"
     depends_on:
       - zookeeper
