--- a/kafka-csharp/Kafka/docker-compose.yml
+++ b/kafka-csharp/Kafka/docker-compose.yml
@@ -42,3 +42,11 @@ services:
       CONFLUENT_SUPPORT_METRICS_ENABLED: "false"
     depends_on:
       - zookeeper
+
+  schema-registry:
+    image: confluentinc/cp-schema-registry
+    ports:
+      - 8081:8081
+    environment:
+      SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: zookeeper:2181
+      SCHEMA_REGISTRY_HOST_NAME: schema-registry
